# 09-15-2025_discord-meeting-transcriptor

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT.md  ATTACHMENT_IMPLEMENTATION_SUMMARY.md  DATA_FLOW_VERIFICATION.md  DEVELOPMENT.md  GPU_IMPLEMENTATION_ANALYSIS.md  GPU_USAGE_GUIDE.md  IMPLEMENTATION_SUMMARY_TWO_TIER_STORAGE.md  INTEGRATION_GUIDE_TWO_TIER_STORAGE.md  Makefile  QUICKSTART_TWO_TIER_STORAGE.md  README.md  docker-compose.local.yml  docker-compose.yml  dy.sh  format.py  lint.py  main.py  mypy.ini  playground.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_dev.sh  run_docker_compose.sh  run_tests.sh  run_tests_env.sh  temp_old_manager.txt  test_eager_logging.py
assets/: .gitignore
assets/binaries/whisper/: README.md
cogs/: chat.py  general.py  reels.py  utils.py  voice.py
development/: CHATBOT_README.md  chatbot.ipynb  chatbot.py  chatbot_v2.py  compilation.ipynb  compilation.py  langgraph_playground.py  main.ipynb  main.py  ollama_native_demo.py  requirements-chatbot.txt
docs/: ATTACHMENT_BATCHING_EXAMPLE.md  ATTACHMENT_DOWNLOAD_SYSTEM.md  ATTACHMENT_SUPPORT.md  INSTAGRAM_REELS_VECTORDB_STORAGE.md  SUMMARY_EMBEDDINGS_IMPLEMENTATION.md
playground/: google_search_results.json  playground.py  summarize.py  tools.py
playground/assets/: transcript.json
scripts/: add_echo_channels_table.py  add_monitoring_stopped_column.py  check_chroma_data.py  clean_conversations.py  debug_chroma_search.py  fix_database_schema.py  migrate_conversations_table.py  run_docker_compose.sh  run_ollama.sh  run_whisper.sh  run_whisper_service.sh  sql_viewer.py
scripts/backpropagate/: transcript_add_summaries.py
scripts/chromadb/: admin_page.py
source/: __init__.py  constructor.py  context.py  request_context.py  utils.py
source/server/: __init__.py  constructor.py  db_models.py  models.py  postgresql.py  server.py  services.py  sql_models.py  vector_db_collections.py
source/server/common/: __init__.py  chroma.py  ollama.py  vector_db.py  whisper_server.py
source/server/dev/: constructor.py  mysql.py  vectordb.py
source/server/production/: constructor.py  postgresql.py
source/server/testing/: README.md  __init__.py  constructor.py  mysql.py  vector_db.py  whisper_server.py
source/services/: constructor.py  logger.py  manager.py  rag.py  transcribe.py
source/services/chat/: __init__.py
source/services/chat/chat_job_manager/: __init__.py  attachment_utils.py  manager.py  prompts.py
source/services/chat/chatbot_sql_manager/: __init__.py
source/services/chat/conversation_file_manager/: __init__.py  manager.py
source/services/chat/conversation_manager/: __init__.py  in_memory_cache.py
source/services/chat/conversations_sql_manager/: __init__.py  manager.py
source/services/chat/conversations_store_sql_manager/: __init__.py  manager.py
source/services/chat/echo_manager/: __init__.py  manager.py
source/services/chat/echo_sql_manager/: __init__.py  manager.py
source/services/chat/mcp/: README.md  __init__.py  manager.py  subroutine_manager.py
source/services/chat_job_manager/: attachment_utils.py  manager.py
source/services/chatbot_sql_manager/: manager.py
source/services/common/: __init__.py  job.py
source/services/common/file_manager/: __init__.py  manager.py
source/services/common/sql_logging_manager/: __init__.py
source/services/common/subscription_sql_manager/: __init__.py
source/services/conversation_file_manager/: README.md  manager.py
source/services/conversation_manager/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  __init__.py  example_usage.py  in_memory_cache.py  test_in_memory_cache.py
source/services/conversations_sql_manager/: __init__.py  manager.py
source/services/conversations_store_sql_manager/: __init__.py
source/services/discord/: __init__.py
source/services/discord/discord_recorder_manager/: __init__.py  (+1 more)
source/services/discord_recorder/: USAGE_EXAMPLE.md  manager.py  pcm_generator.py
source/services/discord_recorder_manager/: manager.py
source/services/ffmpeg_manager/: manager.py
source/services/file_manager/: manager.py
source/services/gpu/: __init__.py
source/services/gpu_resource_manager/: __init__.py  lock.py  manager.py
source/services/ollama_request_manager/: __init__.py  conversation.py  langchain_adapter.py  manager.py  models.py
source/services/presence_manager/: __init__.py  manager.py
source/services/recording_file_manager/: manager.py
source/services/recording_sql/: manager.py
source/services/recording_sql_manager/: __init__.py  manager.py
source/services/sql_logging/: manager.py
source/services/subscription_sql_manager/: __init__.py  manager.py
source/services/summarization_job_manager/: __init__.py  manager.py  prompts.py
source/services/text_embedding_manager/: __init__.py  manager.py  summary_partitioner.py  text_partitioner.py
source/services/transcription/: __init__.py
source/services/transcription_file_manager/: manager.py
source/services/transcription_job_manager/: __init__.py  compiler.py  manager.py
source/services/vector_reranker_manager/: __init__.py  manager.py
tests/: README.md  TEST_ENVIRONMENTS.md  __init__.py  conftest.py  test_deepinfo_command.py
tests/assets/: audio-recording-1.m4a
tests/integration/: README.md  __init__.py  test_database_connections.py  test_database_connections_local.py  test_database_connections_prod.py
tests/integration/services/: __init__.py
tests/unit/: __init__.py  test_mysql_connection.py  test_postgresql.py  test_postgresql_connection.py  test_rag.py  test_testing_environment.py  test_transcription.py
tests/unit/services/: test_chatbot_sql_manager.py  test_conversation_file_manager.py  test_discord_recorder_timeline.py  test_ffmpeg_manager.py  test_ollama_request_manager.py  test_recording_sql_manager.py  test_subscription_sql_manager.py  test_transcription_file_manager.py
whisper_wrapper/: README.md  __init__.py  app.py  config.py  main.py  requirements.txt  timestamp_sanitizer.py  whisper_server.py
(+65 files in other folders)
