[project]
name = "09-15-2025-discord-meeting-transcriptor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "ninja>=1.13.0",
    "psycopg2-binary>=2.9.11",
    "pynacl>=1.6.0",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.44",
    "wheel>=0.45.1",
]

# ============================================================================
# Build System
# ============================================================================
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["source", "cogs"]
