[project]
name = "09-15-2025-discord-meeting-transcriptor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiomysql>=0.2.0",
    "asyncpg>=0.29.0",
    "black>=25.9.0",
    "cryptography>=46.0.3",
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "isort>=7.0.0",
    "ninja>=1.13.0",
    "psycopg2-binary>=2.9.11",
    "pycord>=0.1.1",
    "pydantic>=2.0.0",
    "pynacl>=1.6.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.3",
    "setuptools>=80.9.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "wheel>=0.45.1",
]

# ============================================================================
# Build System
# ============================================================================
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["source", "cogs"]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".git", "__pycache__", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true

# ============================================================================
# Black Configuration
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ============================================================================
# isort Configuration
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["source", "cogs"]
known_third_party = [
    "discord",
    "sqlalchemy",
    "asyncpg",
    "aiomysql",
    "psycopg2",
]
