[project]
name = "09-15-2025-discord-meeting-transcriptor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.11.0",
    "aiofiles>=25.1.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "bitsandbytes>=0.48.2",
    "black>=25.9.0",
    "chromadb>=1.3.4",
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "isort>=7.0.0",
    "langchain>=1.0.5",
    "ninja>=1.13.0",
    "openai-harmony>=0.0.8",
    "psycopg2-binary>=2.9.11",
    "py-cord[voice]",
    "pydantic>=2.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-timeout>=2.4.0",
    "requests>=2.32.5",
    "ruff>=0.14.3",
    "safetensors>=0.6.2",
    "sentence-transformers>=2.6.1",
    "sentencepiece>=0.2.1",
    "setuptools>=80.9.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "torch",
    "torchvision",
    "torchaudio",
    "transformers>=4.44",
    "tzdata>=2025.2",
    "wheel>=0.45.1",
    "hf-xet>=1.2.0",
    "ollama>=0.6.0",
    "langchain-ollama>=1.0.0",
    "flask>=3.1.2",
    "langgraph>=1.0.4",
    "fastmcp>=2.13.1",
]

# ============================================================================
# Build System
# ============================================================================
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["source", "cogs"]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".git", "__pycache__", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true

# ============================================================================
# Black Configuration
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ============================================================================
# isort Configuration
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["source", "cogs"]
known_third_party = [
    "discord",
    "sqlalchemy",
    "asyncpg",
    "aiomysql",
    "psycopg2",
]

[project.optional-dependencies]
gpu-extras = ["bitsandbytes", "flash-attn"]

[tool.uv.sources]
py-cord = { git = "https://github.com/Pycord-Development/pycord" }
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
